completed stretch goals, edits and css

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -11,6 +11,7 @@
       <h1>Week 3 assignment</h1>
       <h2>Check the console...</h2>
     </header>
+    <img src = "CH_reading.jpeg" alt="Reading">
     <!-- create an ordered list with any questions you have on this week's material -->
 
   </body>
